--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,5 +5,12 @@ theme:
 
 nav:
   - Home: 'index.md'
-  - 'Linux': 'Linux.md'
-  - 'Meritocracy': 'Meritocracy.md'
+  - 'Linux':
+      - 'Basic Knowledge': 'base.md'
+  - 'Meritocracy':
+    - '导论': 'Intro.md'
+    - '综述': 'Outline.md'
+    - '研究方法': 'Methods.md'
+    - '研究发现': 'Discovery.md'
+    - '行动建议': 'Solutions.md'
+
